updated selection committee list

--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
                     <h3 class="section-title multiple-title">Selection Committee</h3>
                    <p>
 					  <ul class="list-arrow-right">
+						<li>Ali Javadi</li>
 						<li>Alper Buyuktosunoglu</li>
             <li>Ananda Samajdar</li>
+            <li>Ankur Agrawal</li>
 						<li>Anne Gattiker</li>
             <li>Apoorve Mohan</li>
             <li>Aporva Amarnath</li>
@@ -148,9 +150,9 @@
             <li>Augusto Vega</li>
             <li>Bharat Sukhwani</li>
 						<li>Bishwaranjan Bhattacharjee</li>
-            <li>Bruce D'Amora</li>
 						<li>Bulent Abali</li>
-            <li>Charanjeet Jutla</li>
+            <li>Carlos Costa</li>
+            <li>Charanjit Jutla</li>
             <li>Chia-yu Chen</li>
             <li>Christine Ouyang</li>
             <li>Claudia Misale</li>
@@ -165,17 +167,19 @@
             <li>J.R. Rao</li>
             <li>Jaime Moreno</li>
             <li>Jamie Yang</li>
+            <li>Jintao Zhang</li>
             <li>John Carter</li>
 						<li>John-David Wellman</li>
             <li>Jose Moreira</li>
             <li>Karthik V. Swaminathan</li>
-            <li>Leopold Grinberg</li>
             <li>Manoj Kumar</li>
+            <li>Marcel Schaal</li>
             <li>Martin Cochet</li>
             <li>Matthew Zeigler</li>
             <li>Mengmei Ye</li>
             <li>Monodeep Kar</li>
 						<li>Nagu Dhanwada</li>
+            <li>Naigang Wang</li>
             <li>Nandhini Chandramoorthy</li>
             <li>Nathan Manohar</li>
             <li>Paul G. Crumley</li>
@@ -197,14 +201,14 @@
             <li>Seetharami Seelam</li>
             <li>Shubham Jain</li>
             <li>Shweta Salaria</li>
+            <li>Shyam Ramji</li>
             <li>Subhankar Pal</li>
             <li>Sunil Shukla</li>
 						<li>Swagath Venkataramani</li>
             <li>Vidhi Zalani</li>
-            <li>Xiaoxiong Gu</li>
             <li>Xin Zhang</li>
-            <li>Xinyu Que</li>
             <li>Yoonho Park</li>
+            <li>Jintao Zhang</li>
             </ul> 
                     </p>
 
