--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-md-offset-1">
+                <div class="col-md-3">
                     <div class="speaker">
                         <figure>
                             <img alt="" title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" >
@@ -275,7 +275,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-md-offset-1">
+                <div class="col-md-3 ">
                     <div class="speaker">
                         <figure>
                             <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-md-offset-2">
+                <div class="col-md-4 col-md-offset-1">
                     <div class="speaker">
                         <figure>
                             <img alt=""  title="Bio" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
