--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
                         <li>	Modeling of cloud-edge solutions for specific safety-, security- and/or privacy-critical applications: e.g., autonomous vehicles, internet banking, credit card fraud detection, etc.</li>
                     </ul>
                     <p>
+                    <h3 class="section-title">References</h3>
+                    <ol>
+                        <li> H. D. Dixit, S. Pendharkar, M. Beadon, C. Mason, T. Chakravarthy, B. Muthiah, S. Sankar, “Silent data corruptions at scale,” https://arxiv.org/abs/2102.11245 , Feb. 22, 2021. </li>
+                        <li>P. H. Hochschild, R. Govindaraju, D. E. Culler, “Cores that don’t count,” HotOS ’21, May 31 – June 2, 2021, Ann Arbor MI. https://doi.org/10.1145/3458336.3465297.</li>
+                        <li>	D. F. Bacon, “Detection and prevention of silent data corruption in an exabyte-scale database system,” The 18th IEEE Workshop on Silicon Errors in Logic – System Effects, IEEE (2022) </li>
+                        <li>	N. Samardzic, A. Feldman, A. Krastev, N. Manohar, S. Devadas, K. Edefravy, C. Peikert, D. Sanchez, “CraterLake: A Hardware Accelerator for Efficient Unbounded Computation on Encrypted Data,” Proc. International Symp. on Computer Architecture (ISCA), June 2022.</li>
+                        <li>	S. Kim, J. Kim, M. J. Kim, W. Jung, J. Kim, M. Rhu, J. H. Ahn, “BTS: An Accelerator for Bootstrappable Fully Homomorphic Encryption,”  Proc. International Symp. on Computer Architecture (ISCA), June 2022. </li>
+                        <li>	A. Feldmann, N. Samardzic, A. Krastev, S. Devadas, R. Dreslinski, K. Eldefrawy, N. Genise, C. Peikert, D. Sanchez, “F1: A Fast and Programmable Accelerator for Fully Homomorphic Encryption (Extended Version),” https://arxiv.org/abs/2109.05371 ; also appeared at MICRO, Oct. 2021.</li>
+                    </ol>
+
 
                     </p>
                     <!--
@@ -115,12 +125,13 @@
                     -->
 
                     <br>
-                    
+                    <!--
                     <h3 class="section-title">Contact</h3>
                         
                     <ul class="list-arrow-right">
                     <li><a href="mailto:info@foca-workshop.org">info@foca-workshop.org</a></li> 
                     </ul>
+                    -->
                 </div><!-- /.col-sm-6 -->
 
                 <div class="col-sm-6">
