added advisory board

--- a/index.html
+++ b/index.html
@@ -139,16 +139,29 @@
                     <h3 class="section-title multiple-title">Organizing Committee</h3>
                     <p>
 					<ul class="list-arrow-right">
-                        <li>Augusto Vega (IBM)</li>
-                        <li>Chris Wilkerson (Intel)</li>
-                        <li>David Trilla (IBM)</li>
-                        <li>Jennifer Dworak (SMU)</li>
-                        <li>Karthik Swaminathan (IBM)</li>
-                        <li>Nathan Manohar (IBM)</li>
                         <li>Pradip Bose (IBM)</li>
+                        <li>Augusto Vega (IBM)</li>
+                        <li>Jennifer Dworak (SMU)</li>
                         <li>Subhashish Mitra (Stanford)</li>
+                        <li>Chris Wilkerson (Intel)</li>
                         <li>Ramon Bertran (IBM)</li>
+                        <li>Nathan Manohar (IBM)</li>
+                        <li>David Trilla (IBM)</li>
 					</ul>
+                    </p>
+                    <h3 class="section-title multiple-title">Advisory Program Committee</h3>
+                    <p>
+                        <ul class="list-arrow-right">
+                            <li>Peter H. Hochschild (Google)</li>
+                            <li>Jeffrey Hicks (Intel)</li>
+                            <li>Rob Chappell (Microsoft)</li>
+                            <li>Harish D. Dixit (Meta)</li>
+                            <li>Karthik Swaminathan (IBM)</li>
+                            <li>Omri Soceanu (IBM)</li>
+                            <li>Ambar Sarkar (NVIDIA)</li>
+                            <li>Shawn Blanton (CMU)</li>
+                            <li>Sarita Adve (UIUC)</li>
+                        </ul>
                     </p>
 
                 </div><!-- /.col-sm-6 -->
