added links to easychair and email forward

--- a/index.html
+++ b/index.html
@@ -125,16 +125,21 @@
                     -->
 
                     <br>
-                    <!--
                     <h3 class="section-title">Contact</h3>
                         
                     <ul class="list-arrow-right">
-                    <li><a href="mailto:info@foca-workshop.org">info@foca-workshop.org</a></li> 
+                    <li><a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a></li> 
                     </ul>
-                    -->
                 </div><!-- /.col-sm-6 -->
 
                 <div class="col-sm-6">
+
+                    <h3 class="section-title multiple-title">Call for Contributions</h3>
+                    <p>
+                        Submitted manuscripts must be in English of <strong>up to 2 pages</strong> (with same <a href="https://www.microarch.org/micro55/submit/cameraready.php">formatting guidelines as main conference</a>).
+                        Submissions should be submitted to the following <strong><a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__easychair.org_conferences_-3Fconf-3Ddiscc2022&d=DwIDaQ&c=jf_iaSHvJObTbx-siA1ZOg&r=2qxLwL12bg0DMwyTEHCDMi0jCNMhQa6qZSU_3Ejz-6A&m=HTVWRGt7aGsiVdJwhogAob7lGDNGvrkeFnllmga0JG4WUqhMn2aKkhxXTseryIOE&s=NkkLfFEWZtKh50y0RdB1x00Bq8w5W1Wuqc1hdNiC2-c&e=">link</a></strong> by September 16<sup>th</sup>, 2022.
+                    If you have questions regarding submission, please contact us: <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a>
+                    </p>
 
                     <h3 class="section-title multiple-title">Organizing Committee</h3>
                     <p>
