--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                         <li>Chris Wilkerson (Intel)</li>
                         <li>Ramon Bertran (IBM)</li>
                         <li>Nathan Manohar (IBM)</li>
+                        <li>Nir Drucker</li>
                         <li>David Trilla (IBM)</li>
 					</ul>
                     </p>
