--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h3 class="section-title multiple-title">Call for Contributions</h3>
                     <p>
                         Submitted manuscripts must be in English of <strong>up to 2 pages</strong> (with same <a href="https://www.microarch.org/micro55/submit/cameraready.php">formatting guidelines as main conference</a>).
-                        Submissions should be submitted to the following <strong><a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__easychair.org_conferences_-3Fconf-3Ddiscc2022&d=DwIDaQ&c=jf_iaSHvJObTbx-siA1ZOg&r=2qxLwL12bg0DMwyTEHCDMi0jCNMhQa6qZSU_3Ejz-6A&m=HTVWRGt7aGsiVdJwhogAob7lGDNGvrkeFnllmga0JG4WUqhMn2aKkhxXTseryIOE&s=NkkLfFEWZtKh50y0RdB1x00Bq8w5W1Wuqc1hdNiC2-c&e=">link</a></strong> by September 16<sup>th</sup>, 2022.
+                        Submissions should be submitted to the following <strong><a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__easychair.org_conferences_-3Fconf-3Ddiscc2022&d=DwIDaQ&c=jf_iaSHvJObTbx-siA1ZOg&r=2qxLwL12bg0DMwyTEHCDMi0jCNMhQa6qZSU_3Ejz-6A&m=HTVWRGt7aGsiVdJwhogAob7lGDNGvrkeFnllmga0JG4WUqhMn2aKkhxXTseryIOE&s=NkkLfFEWZtKh50y0RdB1x00Bq8w5W1Wuqc1hdNiC2-c&e=">link</a></strong> by <del>September 16<sup>th</sup></del><font color="red"> September 23<sup>rd</sup> (deadline extended) </font>, 2022.
                     If you have questions regarding submission, please contact us: <a href="mailto:info@disccworkshop.org">info@disccworkshop.org</a>
                     </p>
 
@@ -151,7 +151,7 @@
                         <li>Chris Wilkerson (Intel)</li>
                         <li>Ramon Bertran (IBM)</li>
                         <li>Nathan Manohar (IBM)</li>
-                        <li>Nir Drucker</li>
+                        <li>Nir Drucker (IBM)</li>
                         <li>David Trilla (IBM)</li>
 					</ul>
                     </p>
@@ -181,13 +181,13 @@
                 <div class="col-sm-4">
 
                     <i class="ion-ios-calendar"></i>
-                    <h3>Paper Submission Deadline<br>September 16<sup>th</sup>, 2022</h3>
+                    <h3>Paper Submission Deadline<br><del>September 16<sup>th</sup>, 2022</del><br><font color="red">September 23 <sup>rd</sup></font></h3>
                 
                 </div>
                 <div class="col-sm-4">
 
                     <i class="ion-ios-calendar"></i>
-                    <h3>Notification Date<br>September 23<sup>rd</sup>, 2022</h3>
+                    <h3>Notification Date<br><del>September 23<sup>rd</sup>, 2022</del><br><font color="red">Setpember 26<sup>th</sup></font></h3>
                 
                 </div>
                 <div class="col-sm-4">
