--- a/index.html
+++ b/index.html
@@ -376,37 +376,50 @@
                         </tr>
                       </thead>
                       <tbody>
+                          <tr>
+                          <th scope="row">8:30 -8:45am</th>
+                          <td>Welcome Remarks</td>
+                          </tr>
+                        <tr bgcolor="#EBF5FB">
+                          <th scope="row">8:45 - 09:30am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 1: Circuit Structures for Enhancing Efficient Defect Detection </strong> <br> Jennifer Dworak (SMU) </br>  </td> 
+                        </tr>
                         <tr>
+                          <th scope="row">09:30 - 09:50am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
+                              Talk 1: Tolerate Silent Data Errors with Coded Computation <br> Gefei Zuo (University of Michigan) </br></td>
+                        </tr>
+                        <tr>
+                          <th scope="row">09:50 - 10:10am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
+                              Talk 2: Efficient Runtime Mercurial Core Detection with Core-Specific Test Case Synthesis <br> Jiacheng Ma (University of Michigan) </br> 
+                          </td>
+                        </tr>
+                        <tr>
+                        <tr bgcolor="#EBF5FB">
+                          <th scope="row">10:10 - 10:55pm</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 2: </strong> <br> </br>  </td> 
+                        </tr>
+                          <th scope="row">10:55 - 11:15am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
+                              Talk 3: Prune, Permute and Expand: Efficient Machine Learning under Non-Client-Aided Homomorphic Encryption <br> (IBM Research) </br> </td>
+                        <tr>
+                        <tr>
+                          <th scope="row">11:15 - 11:35am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
+                              Talk 4: Characterizing Memory Side Channels in FHE Applications <br> Asmita Pal (University of Wisconsin-Madison) </br> </td>
+                          <tr>
+                          <th scope="row">11:35 - 11:50am</th>
+                          <td>Closing Remarks</td>
+                          </tr>
+                       <!--<tr>
                           <th scope="row">8:00 - 9:00am</th>
                           <td>Tutorial 1: Tendencies in FHE Accelerators
                               <br> Part 1: Introduction to FHE</br>
                               <br>Part 2: FHE Accelerators - Overview and Comparison</br>
                               <br>David Trilla, Subhankar Pal (IBM Research)</br>
                           </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">09:00 - 09:30am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                              Talk 1: Software Optimization in FHE<br> Subhankar Pal (IBM Research) </br></td>
-                        </tr>
-                        <tr>
-                          <th scope="row">09:30 - 10:00am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                           Talk 2: TBA</td>
-                        <tr>
-                        <tr>
-                          <th scope="row">10:00 - 10:30am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                           Talk 3: TBA</td>
-                        <tr>
-                        <tr>
-                          <th scope="row">10:30 - 11:00am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                           Talk 4: TBA</td>
-                        <tr bgcolor="#EBF5FB">
-                          <th scope="row">11:00 - 12:00pm</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 1: </strong>  </td> 
-                        </tr>
+                       </tr>-->
                         </tbody>
                     </table>
                 </div>
