--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                         <li>Ramon Bertran (IBM)</li>
                         <li>Nathan Manohar (IBM)</li>
                         <li>Nir Drucker (IBM)</li>
+						            <li>Subhankar Pal (IBM)</li>
                         <li>David Trilla (IBM)</li>
 					</ul>
                     </p>
@@ -233,43 +234,40 @@
             <div class="row">
               <div class="col-md-12">
                 <h3 class="section-title">Keynote Speakers</h3>
-                TBA
               </div>
             </div>
-            <!-- 
             <div class="row">
               <div class="col-md-2">
                   <div class="speaker">
                   <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="Andy will talk about the Mayflower Autonomous Ship project, in which IBM is the technology partner. Mayflower has no captain and no crew, and is a scientific research vessel for gathering data from the ocean to help us understand the impact of climate change and pollution, studying things like microplastics and the health of marine mammals. This fully autonomous boat is scheduled to sail from Plymouth UK to Plymouth Massachusetts, recreating the journey of the Pilgrim Fathers just over 400 years ago. Andy will describe how the AI Captain navigates the ship and talks about some of the scientific experiments on board, and the data these are producing.">
+                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
                   </figure>
                 </div>
              </div>
              <div class="col-sm-10">
-                    <h3>Mayflower Autonomous Ship - the future of autonomous marine exploration</h3>
-                    <h4>Andy Stanford-Clark (IBM Corporate Strategy)</h4>
-                    <p>Prof Andy Stanford-Clark leads transformational innovation projects for clients in EMEA as part of IBM's Corporate Strategy organisation. He is an IBM Distinguished Engineer, a Master Inventor with more than 40 patents, and is IBM's Quantum Computing leader for the UK. Andy is based at IBM's Hursley Park laboratories near Winchester, and has has been working in the area that we now call the Internet of Things for more than 20 years. He has a BSc in Computing and Mathematics, and a PhD in Computer Science. He is a Visiting Professor at the University of Newcastle, an Honorary Professor at the University of East Anglia, an Adjunct Professor at the University of Southampton, and a Fellow of the British Computer Society.</p>
+                    <h3></h3>
+                    <h4>Jennifer Dworak (SMU)</h4>
+                    <p></p>
             </div>
              </div>
           <div class="row">
               <div class="col-md-2">
                   <div class="speaker">
                   <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="Reports of exploits and vulnerabilities at every layer of the systems stack are reflective of a growing trend of increasingly sophisticated attackers and an urgent need for more innovative and effective defenses. Attackers have seized the advantage with the democratization of AI and the ubiquitous availability of computing resources via third party service providers while defenders endeavor to keep pace. The recent Presidential Executive Order on Improving the Nation's Cybersecurity from the current US administration significantly raises the bar on security on both government and commercial IT service providers creating a unique opportunity to infuse new security architectures and technologies into enterprise defenses. The time is ripe for harvesting decades long work in systems security research to implement and deploy confidential computing mechanisms to lay the foundation for zero trust architectures and secure enterprise and cloud environments. In this talk, we will describe the drivers and evolution of both compute-centric and data-centric confidential computing mechansims that were pioneered at IBM Research and discuss the important problems that remain to be solved to realize the promise of these technologies and bring change across the industry.">
+                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/placeholder.png" data-content="">
                   </figure>
                 </div>
              </div>
              <div class="col-sm-10">
-               <h3>Systems Security in a Zero Trust World: An Industrial Research Perspective</h3>
-               <h4>Josyula R. Rao</h4>
-               <p>J.R. Rao is an IBM Fellow and CTO for the Security Research team at IBM. Based at the IBM Thomas. J. Watson Research Center, the global team comprises more than 200 researchers who work in the areas of AI Security, Cybersecurity, Cloud and Systems Security, Information Security and Cryptography. JR works closely with commercial and government customers, academic partners and IBM business units to drive new and innovative technologies into IBM's products and services and definitive industry standards. The goal of his research is to significantly raise the bar on the quality of security while simultaneously easing the overhead of developing and deploying secure solutions. Dr. Rao has published widely in premier security conferences and workshops and holds numerous US and European patents. He is a member of the IBM Academy of Technology, emeritus member of IFIP's Working Group 2.3 (Programming Methodology) and the Industry Advisory Board of the Georgia Tech Information Security Center. Dr. Rao obtained his doctorate degree from the University of Texas at Austin, a Master’s degree in Computer Science from the State University of New York at Stony Brook, and a Bachelor of Technology degree in Electrical Engineering from the Indian Institute of Technology, Kanpur.</p>
+               <h3></h3>
+               <h4>Daniel Sanchez</h4>
+               <p></p>
             </div>
              </div>
-            -->
       </div>
     </section>
 
-    <section id="speakers" class="section speakers">
+    <!--<section id="speakers" class="section speakers">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -277,6 +275,7 @@
                 </div>
             </div>
             TBA
+    -->
             <!--
             <div class="row">
                 <div class="col-md-3">
@@ -365,8 +364,9 @@
             <div class="row">
                 <div class="col-md-11">
                     <h3 class="section-title">Program</h3>
-                    TBA/Subject to changes
                     (<em>all times are in Central Time</em>)
+                    <br>
+                    <strong><sup>1</sup>Hybrid talks will happen live on-site and through webex, link will be emailed prior to the workshop</strong>
                     </br>
                     <p>
                     <table class="table table-hover">
@@ -377,40 +377,45 @@
                       </thead>
                       <tbody>
                           <tr>
-                          <th scope="row">8:30 -8:45am</th>
+                          <th scope="row">8:30 -8:40am</th>
                           <td>Welcome Remarks</td>
                           </tr>
                         <tr bgcolor="#EBF5FB">
-                          <th scope="row">8:45 - 09:30am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 1: Circuit Structures for Enhancing Efficient Defect Detection </strong> <br> Jennifer Dworak (SMU) </br>  </td> 
+                          <th scope="row">8:40 - 09:20am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong> Keynote 1: Circuit Structures for Enhancing Efficient Defect Detection - Hybrid<sup>1</sup> </strong><br> Jennifer Dworak (SMU) </br>  </td> 
                         </tr>
                         <tr>
-                          <th scope="row">09:30 - 09:50am</th>
+                          <th scope="row">09:20 - 09:40am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
                               Talk 1: Tolerate Silent Data Errors with Coded Computation <br> Gefei Zuo (University of Michigan) </br></td>
                         </tr>
                         <tr>
-                          <th scope="row">09:50 - 10:10am</th>
+                          <th scope="row">09:40 - 10:00am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
                               Talk 2: Efficient Runtime Mercurial Core Detection with Core-Specific Test Case Synthesis <br> Jiacheng Ma (University of Michigan) </br> 
                           </td>
                         </tr>
+                        <tr bgcolor="#FEF9E7">
+                          <th scope="row">10:00 - 10:15am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><i>Break</i>
+                          </td>
+                        </tr>
                         <tr>
                         <tr bgcolor="#EBF5FB">
-                          <th scope="row">10:10 - 10:55pm</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 2: </strong> <br> </br>  </td> 
+                          <th scope="row">10:15 - 10:55am</th>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 2: - Hybrid<sup>1</sup> </strong> <br> Daniel Sanchez (MIT) </br>  </td> 
                         </tr>
                           <th scope="row">10:55 - 11:15am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                              Talk 3: Prune, Permute and Expand: Efficient Machine Learning under Non-Client-Aided Homomorphic Encryption <br> (IBM Research) </br> </td>
+                              Talk 3: Prune, Permute and Expand: Efficient Machine Learning under Non-Client-Aided Homomorphic Encryption <br> Subhankar Pal (IBM Research) </br> </td>
                         <tr>
                         <tr>
-                          <th scope="row">11:15 - 11:35am</th>
+                          <th scope="row">11:15- 11:35am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
                               Talk 4: Characterizing Memory Side Channels in FHE Applications <br> Asmita Pal (University of Wisconsin-Madison) </br> </td>
                           <tr>
-                          <th scope="row">11:35 - 11:50am</th>
-                          <td>Closing Remarks</td>
+                          <th scope="row">11:35 - 12:15pm</th>
+                          <td>Open Mic: Discussion on Data Integrity and Secure Cloud Computing - Hybrid<sup>1</sup> </td>
                           </tr>
                        <!--<tr>
                           <th scope="row">8:00 - 9:00am</th>
@@ -460,6 +465,14 @@
                 <p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
                     target="_blank">Karthik Swaminathan</a> </b> is a research staff member at the Efficient and Resilient Systems Group at the IBM T.J Watson Research Center. His research has a broad, cross-layer scope examining circuit, architecture and application level optimizations for improving the reliability and energy efficiency of multi core systems and accelerators.  He also works on characterizing performance and reliability of IBM server-class and mainframe processors at various stages of design. He holds a PhD from Penn State University. 
+                </p>
+                <p>
+                <b><a href="https://www.linkedin.com/in/palsubhankar/" rel="nofollow" target="_blank">Subhankar Pal</a> </b>is a
+				Postdoctoral Researcher in the Efficient and Resilient Systems group at IBM T. J. Watson Research Center. His current
+				research is focused on hardware acceleration for domain-specific and energy efficient systems. He holds a Ph.D. and M.Sc.
+				from the University of Michigan. His Ph.D. thesis looked at designing a reconfigurable, software-defined hardware solution
+				that balances programmability with energy efficiency. Prior to that, Subhankar was with NVIDIA, where he worked on pre-silicon
+				verification and bring-up of multiple generations of GPUs.
                 </p>
                 <p>
                 <b>David Trilla</b> is a Post-doctoral Researcher at IBM T. J. Watson Research Center. He has worked on real-time systems and current 
