--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                <h4>Daniel Sanchez</h4>
                <p></p>
             </div>
-             </div>
+        </div>
       </div>
     </section>
 
@@ -386,13 +386,13 @@
                         </tr>
                         <tr>
                           <th scope="row">09:20 - 09:40am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                              Talk 1: Tolerate Silent Data Errors with Coded Computation <br> Gefei Zuo (University of Michigan) </br></td>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="While hyper-scale data centers are reporting a growing number of Silent Data Errors (SDEs), existing detection alone is still insufficient to build an SDE-resilient system. In this work, we propose the adoption of Coded Computation to mitigate SDE computation errors efficiently. Based upon error correcting codes (ECC), which have been proven valuable to the mitigation of SDEs in storage and communication, coded computation performs computations in parallel that are homomorphic to ECC encoding/decoding functions, thus tolerating a configurable amount of computation errors. We first give a motivating example to compare coded computation with the traditional Triple Modular Redundancy. Then we introduce the state-of-the-art coded computation, their applications to SDEs mitigation mechanisms, and open questions for future work.">
+                              <a href="assets/pdfs/1.pdf">Talk 1: Tolerate Silent Data Errors with Coded Computation <br> Gefei Zuo (University of Michigan) </br></td>
                         </tr>
                         <tr>
                           <th scope="row">09:40 - 10:00am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                              Talk 2: Efficient Runtime Mercurial Core Detection with Core-Specific Test Case Synthesis <br> Jiacheng Ma (University of Michigan) </br> 
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="In this paper we propose Defecticon, a system for efficient mercurial core detection at runtime. Defecticon synthesizes customized test cases for each CPU core based on their characteristics, and provides APIs for developers to integrate the generated test cases to their applications. To generate customized test cases, Defecticon first identifies a set of potentially defective flip-flops and gates on each core, via scan-based testing with an intentionally reduced, abnormal voltage. Defecticon then uses symbolic execution and/or bounded model checking to generate the test case as an instruction sequence that, once executed, propagates the potential defects to a software-visible state like a general purpose register or the L1 cache. Finally, Defecticon generates the necessary assertions to identify the defects, and stores the test case in a way that can be loaded and executed for each core at application runtime.">
+                              <a href="assets/pdfs/2.pdf">Talk 2: Efficient Runtime Mercurial Core Detection with Core-Specific Test Case Synthesis <br> Jiacheng Ma (University of Michigan) </br> 
                           </td>
                         </tr>
                         <tr bgcolor="#FEF9E7">
@@ -406,13 +406,13 @@
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 2: - Hybrid<sup>1</sup> </strong> <br> Daniel Sanchez (MIT) </br>  </td> 
                         </tr>
                           <th scope="row">10:55 - 11:15am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                              Talk 3: Prune, Permute and Expand: Efficient Machine Learning under Non-Client-Aided Homomorphic Encryption <br> Subhankar Pal (IBM Research) </br> </td>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="Privacy-preserving neural network (NN) inference solutions under homomorphic encryption (HE) have recently gained significant traction with several solutions that provide different latency-bandwidth trade-offs. Pruning the parameters of a NN model is a well-known approach to improving inference latency. However, pruning methods that are useful in the plaintext context may lend nearly negligible improvement in the HE case. In this work, we propose a novel set of pruning methods that reduce the latency and memory requirement, thus bringing the effectiveness of plaintext pruning methods to HE. We evaluate our methods on an autoencoder architecture on MNIST and show that our best method prunes ∼2× more ciphertexts than our adaptation of a state-of-the-art scheme called Hunter, for negligible increase in mean-square reconstruction loss.">
+                              <a href="assets/pdfs/3.pdf">Talk 3: Prune, Permute and Expand: Efficient Machine Learning under Non-Client-Aided Homomorphic Encryption <br> Subhankar Pal (IBM Research) </br> </td>
                         <tr>
                         <tr>
                           <th scope="row">11:15- 11:35am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="">
-                              Talk 4: Characterizing Memory Side Channels in FHE Applications <br> Asmita Pal (University of Wisconsin-Madison) </br> </td>
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content="Privacy-preserving cloud computations ensure accurate operations on encrypted data without revealing sensitive information. Fully Homomorphic Encryption (FHE) allows such computations in the ciphertext space. The result remains in encrypted form and can only be decrypted by using the secret key. Due to its high degree of security, FHE has been adopted widely for applications based on medical or genomic data processing. Though FHE has been shown to be secure, side channels emanating from its operations on underlying hardware have not been thoroughly explored. In this work, we analyze the memory access patterns emanating from FHE-encrypted applications. For an example database query-based application, we show that memory access patterns from different queries can be distinguished by a well-resourced adversary. With the aid of ML-based classifiers, we can predict whether or not a query belongs to an entry in the database, with ∼90% accuracy."> 
+                              <a href="assets/pdfs/4.pdf">Talk 4: Characterizing Memory Side Channels in FHE Applications <br> Asmita Pal (University of Wisconsin-Madison) </br> </td>
                           <tr>
                           <th scope="row">11:35 - 12:15pm</th>
                           <td>Open Mic: Discussion on Data Integrity and Secure Cloud Computing - Hybrid<sup>1</sup> </td>
