--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<ul class="list-arrow-right">
                         <li>Pradip Bose (IBM)</li>
                         <li>Augusto Vega (IBM)</li>
-                        <li>Jennifer Dworak (SMU)</li>
+                        <!--<li>Jennifer Dworak (SMU)</li>-->
                         <li>Subhashish Mitra (Stanford)</li>
                         <li>Chris Wilkerson (Intel)</li>
                         <li>Ramon Bertran (IBM)</li>
@@ -245,7 +245,7 @@
                 </div>
              </div>
              <div class="col-sm-10">
-                    <h3></h3>
+                    <h3>Circuit Structures for Enhancing Efficient Defect Detection</h3>
                     <h4>Jennifer Dworak (SMU)</h4>
                     <p></p>
             </div>
@@ -259,7 +259,7 @@
                 </div>
              </div>
              <div class="col-sm-10">
-               <h3></h3>
+               <h3>An Architecture to Accelerate Computation on Encrypted Data</h3>
                <h4>Daniel Sanchez</h4>
                <p></p>
             </div>
@@ -403,7 +403,7 @@
                         <tr>
                         <tr bgcolor="#EBF5FB">
                           <th scope="row">10:15 - 10:55am</th>
-                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 2: - Hybrid<sup>1</sup> </strong> <br> Daniel Sanchez (MIT) </br>  </td> 
+                          <td data-toggle="popover" data-placement="top" data-container="body" data-content=""><strong>Keynote 2: An Architecture to Accelerate Computation on Encrypted Data - Hybrid<sup>1</sup> </strong> <br> Daniel Sanchez (MIT) </br>  </td> 
                         </tr>
                           <th scope="row">10:55 - 11:15am</th>
                           <td data-toggle="popover" data-placement="top" data-container="body" data-content="Privacy-preserving neural network (NN) inference solutions under homomorphic encryption (HE) have recently gained significant traction with several solutions that provide different latency-bandwidth trade-offs. Pruning the parameters of a NN model is a well-known approach to improving inference latency. However, pruning methods that are useful in the plaintext context may lend nearly negligible improvement in the HE case. In this work, we propose a novel set of pruning methods that reduce the latency and memory requirement, thus bringing the effectiveness of plaintext pruning methods to HE. We evaluate our methods on an autoencoder architecture on MNIST and show that our best method prunes ∼2× more ciphertexts than our adaptation of a state-of-the-art scheme called Hunter, for negligible increase in mean-square reconstruction loss.">
@@ -442,13 +442,13 @@
                 <p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
                     target="_blank">Pradip Bose</a> </b> is a Distinguished Research Scientist and manager of Efficient and Resilient Systems at IBM T. J. Watson Research Center. He has over 39 years of experience at IBM and was a member of the pioneering RISC super scalar project at IBM (a pre-cursor to the first RS/6000 system product). He holds M.S. and Ph.D. degrees from University of Illinois at Urbana-Champaign. He is a member of IBM’s elite Academy of Technology and he is a Fellow of the IEEE.</p>
-                <p>
+                <!--<p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
                     target="_blank">Jennifer Dworak</a> </b> is a Professor of Electrical and Computer Engineering at Southern Methodist University. She holds M.S. and Ph.D degrees from Texas A&M University. Her research areas of expertise and interest include hardware security and reliability testing of integrated circuits.
-                </p>
+                </p>-->
                 <p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
-                    target="_blank">Nathan Manohar</a> </b> s a Research Scientist in Cryptography, Security, and Privacy and a member of the Cryptography Research Group at the IBM T.J. Watson Research Center. His main research interests are cryptography, computer security, and, more broadly, theoretical computer science. He is particularly interested in fully homomorphic encryption, secure multi-party computation, and functional encryption. He recently received his PhD in Computer Science from UCLA and joined IBM in 2021.
+                    target="_blank">Nathan Manohar</a> </b> is a Research Scientist in Cryptography, Security, and Privacy and a member of the Cryptography Research Group at the IBM T.J. Watson Research Center. His main research interests are cryptography, computer security, and, more broadly, theoretical computer science. He is particularly interested in fully homomorphic encryption, secure multi-party computation, and functional encryption. He recently received his PhD in Computer Science from UCLA and joined IBM in 2021.
                 </p>
                 <p>
                 <b><a href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kvswamin" rel="nofollow" 
